Finished lasagna page and added egg-salad and spaghetti pages

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,11 +11,42 @@
 <body>
     <!-- heading for recipe name -->
     <h1>Luigis Lasagna</h1>
+
+    <!-- description -->
+    <h3>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h3>
     
     <!-- Image of lasagna -->
     <img src="../images/lasagna.png" alt="">
     
     <!-- heading for ingredients list -->
-    <h3>Ingredients</h3>
+    <h4>Ingredients</h3>
+
+
+    <!-- beginging of ingredients list -->  
+    <ul>
+        <li>2lbs ground beef</li>
+        <li>1 white onion</li>
+        <li>2 cloves of Garlic</li>
+        <li>1 can crushed Tomatoes</li>
+        <li>2 tablespoons sugar</li>
+        <li>1 block of mozarella cheese</li>
+    </ul>
+
+    <!-- heading for steps -->
+    <h4>Steps</h4>
+
+    <!-- list of steps -->
+    <ol>
+        <li>In a large skillet, cook 2 pounds of ground beef over medium-high heat until it's browned and no longer pink. Break it into small pieces as it cooks.</li>
+        <li>Dice the white onion and mince the garlic cloves.
+            Add the diced onion and minced garlic to the browned beef and sauté for a few minutes until the onions become translucent.
+            Pour in the can of crushed tomatoes and add 2 tablespoons of sugar to the mixture. Stir well.</li>
+        <li>Reduce the heat to low and let the sauce simmer for about 15-20 minutes, stirring occasionally. This allows the flavors to meld together and the sauce to thicken slightly.</li>
+        <li>Preheat your oven to the temperature indicated on the lasagna noodle package (usually around 350°F or 175°C).
+            In a greased baking dish, start layering the lasagna. Begin with a layer of the meat sauce, followed by a layer of lasagna noodles, a layer of sliced mozzarella cheese, and repeat until you've used up all your ingredients, finishing with a layer of sauce on top.</li>
+        <li>Cover the baking dish with aluminum foil and bake in the preheated oven for about 25-30 minutes, or until the lasagna is hot and bubbly.
+            Remove the foil and bake for an additional 10-15 minutes until the top is golden and the cheese is melted and slightly browned.
+            Let the lasagna rest for a few minutes before slicing and serving. Enjoy!</li>
+    </ol>
 </body>
 </html>
