Added egg salad webpage with egg salad picture

--- a/recipes/egg-salad.html
+++ b/recipes/egg-salad.html
@@ -9,6 +9,11 @@
 
 
 <body>
+    <!-- heading for recipe name -->
+    <h1>Edwards Egg Salad</h1>
+
+    <!-- adding image -->
+    <img src=""
 
 </body>
 </html>
