Added titles to pages and added link for egg salad page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <meta charset="UTF-8">
 
 <head>
-    <title></title>
+    <title>Odin Recipes</title>
 </head>
 
 
 <body>
     <h1>Odin Recipes</h1>
 
+    <!-- links to different recipes -->
     <a href="./recipes/lasagna.html">Lasagna</a>
+
+    <a href="./recipes/egg-salad.html">Egg Salad</a>
 </body>
 
 </html>
