--- a/recipes/egg-salad.html
+++ b/recipes/egg-salad.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 
 <head> 
-
+    <title>Edwards Egg Salad</title>
 </head>
 
 
@@ -12,8 +12,39 @@
     <!-- heading for recipe name -->
     <h1>Edwards Egg Salad</h1>
 
+    <!-- description of recipe -->
+    <h3>This egg salad tastes wonderful in a sandwich and will definitely be devoured! It's really good on rye.</h3>
+
     <!-- adding image -->
-    <img src=""
+    <img src="../images/egg-salad.jpg" alt="">
+
+
+    <!-- heading for ingredients list -->
+    <h4>Ingredients</h4>
+
+    <!-- list for ingredients -->
+    <ul>
+        <li>4 eggs</li>
+        <li>2tbsp Mayonaise</li>
+        <li>1tbsp Hot Sauce</li>
+        <li>1 Green onion</li>
+        <li>1tbsp Salt</li>
+        <li>1tbsp Pepper</li>
+        <li>1tbsp Paprika</li>
+    </ul>
+
+
+    <!-- heading for steps -->
+    <h4>Steps</h4>
+
+    <!-- list for steps -->
+    <ol>
+        <li> Boil and peel the eggs, then chop them.</li>
+        <li>Mix mayonnaise, mustard, salt, pepper, and paprika in a bowl to make the dressing.</li>
+        <li> Finely chop the green onion.</li>
+        <li>Combine the chopped eggs, green onion, and dressing in a bowl and mix well.</li>
+        <li>Spread the egg salad mixture onto bread slices to make a sandwich.</li>
+    </ol>
 
 </body>
 </html>
