formatted index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <!-- links to different recipes -->
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <!-- list of recipes -->
+     <ul>
 
-    <a href="./recipes/egg-salad.html">Egg Salad</a>
+         <!-- links to different recipes -->
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/egg-salad.html">Egg Salad</a></li>
+        
+    </ul>
 </body>
 
 </html>
